--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "debug.console.closeOnEnd": true
+    "debug.console.closeOnEnd": true,
+    "editor.codeActionsOnSave": {
+            "source.fixAll.eslint": true
+    },
+    "eslint.validate": ["javascript"]
+    
 }
