--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": ["eslint:recommended", "prettier"],
     "overrides": [],
@@ -14,6 +15,7 @@
         "indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
         "semi": ["error", "always"],
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "multiline-ternary": "error"
     }
 }
