--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "scripts": {
         "start": "cross-env NODE_ENV=production node index.js",
         "dev": "cross-env NODE_ENV=development nodemon index.js",
-        "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles",
         "lint": "eslint .",
-        "lint:1": "eslint"
+        "lint:1": "eslint",
+        "test:api": "npm test -- tests/note_api.test.js"
     },
     "author": "",
     "license": "ISC",
@@ -16,6 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
         "mongoose": "^6.10.0"
     },
     "devDependencies": {
