--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles",
         "lint": "eslint .",
         "lint:1": "eslint",
-        "test:api": "npm test -- tests/note_api.test.js"
+        "test:api": "npm test -- tests/note_api.test.js",
+        "start:test": "NODE_ENV=test node index.js"
     },
     "author": "",
     "license": "ISC",
